# capture

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  capture.bat  capture.code-workspace  capture.py  install.sh  pyproject.toml  requirements.txt  targets.json.example  uninstall.sh
alfred/: info.plist
alfred/md-note-capture/: info.plist
autohotkey/: capture-home.ahk.example
config/: notes-dir.txt.example  repos-dir.txt.example
scripts/: alfred-search.sh  list-md-files.sh  prepend-to-file.sh
