[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "capture-cli"
version = "0.1.0"
description = "Simple CLI tool to quickly capture thoughts to Gmail"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "httplib2==0.19.1",
    "oauth2client==4.1.3",
    "google-api-python-client==2.2.0"
]

[project.scripts]
capture = "capture:main"

[tool.setuptools]
py-modules = ["capture"]

