[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "capture-cli"
version = "0.1.0"
description = "Simple CLI tool to quickly capture thoughts to Gmail"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "google-api-python-client>=2.2.0",
    "google-auth-oauthlib>=1.0.0",
]

[project.scripts]
capture = "capture:main"

[tool.setuptools]
py-modules = ["capture"]

[tool.setuptools.package-data]
"*" = ["targets.json.example"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
